# c-modern

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
Testing/: TAG
Testing/20260417-1737/: Test.xml
archive/legacy_freestanding/: README.md
cmake/: ToolTestRegistration.cmake
compiler/: README.md
compiler/ast/: ast.cpp  ast.h
compiler/codegen_llvm/: backend.cpp  backend.h  backend_checked_helpers.cpp  backend_dump.cpp  backend_executable_aggregate.cpp  backend_executable_atomic.cpp  backend_executable_calls.cpp  backend_executable_memory.cpp  backend_executable_numeric.cpp  backend_executable_support.cpp  backend_executable_value_support.cpp  backend_executable_values.cpp  backend_host.cpp  backend_inspect.cpp  backend_internal.h  backend_names.cpp  backend_types.cpp
compiler/driver/: build_graph.cpp  build_support.cpp  builder.cpp  builder_merge.cpp  driver.cpp  driver.h  driver_test.cpp  internal.h  main.cpp  ops.cpp  project.cpp  project.h
compiler/lex/: lexer.cpp  lexer.h  token.h
compiler/mci/: mci.cpp  mci.h
compiler/mir/: mir.cpp  mir.h  mir_dump.cpp  mir_internal.h  mir_lower.cpp  mir_lower_stmt.inc  mir_text.cpp  mir_type_utils.cpp  mir_validate.cpp  mir_validate_flow.cpp  mir_validate_internal.h
compiler/parse/: parser.cpp  parser.h  parser_decls.cpp  parser_expr.cpp  parser_internal.h  parser_statements.cpp
compiler/sema/: check.cpp  check.h  check_const_eval.cpp  check_internal.h  check_summary.cpp  const_eval.cpp  const_eval.h  layout.cpp  layout.h  module_resolver.cpp  module_resolver.h  type.cpp  type.h  type_predicates.h  type_utils.cpp  type_utils.h
compiler/support/: assert.h  diagnostics.cpp  diagnostics.h  dump_paths.cpp  dump_paths.h  module_paths.h  source_manager.cpp  source_manager.h  source_span.h  target.h
docs/agent/: compiler_critiques.txt  repo_map.md
docs/arch/: README.txt  ast_spec.txt  backend_strategy.txt  build_spec.txt  canonical_programs.txt  compiler_design_ideas.txt  grammar_spec.txt  key_decisions.txt  language_spec.txt  lexer_spec.txt  memory_model_spec.txt  modules_spec.txt  open_decisions.txt  positions_agent.txt  runtime_spec.txt  stdlib_spec.txt  test_examples.txt  test_spec.txt  types_spec.txt
docs/plan/: backlog.txt  bootstrap_phase3_9_review.txt  canopus_running_system_support_statement.txt  decision_log.txt  freestanding_support_statement.txt  phase102_timer_sleep_and_scheduler_block_wake_proof.txt  phase103_init_bootstrap_capability_handoff.txt  phase108_kernel_image_and_program_cap_audit.txt  phase10_mir_authority_expansion.txt  phase113_interrupt_entry_and_generic_dispatch_boundary.txt  phase118_request_reply_and_delegation_follow_through.txt  phase11_backend_deepening.txt  phase120_running_system_support_statement.txt  phase122_target_surface_audit.txt  phase129_partial_failure_propagation.txt  phase12_stdlib_runtime_maturity.txt  phase12_stdlib_runtime_maturity_closeout.txt  phase13_toolchain_maturity.txt  phase13_toolchain_maturity_second_wave_closeout.txt  phase14_pressure_program_expansion.txt  phase14_pressure_program_expansion_closeout.txt  phase16_to_phase18_next_series_plan.txt  phase17_compiler_widening_import_visible_typed_surfaces.txt  phase18_workflow_hardening_and_plateau_decision.txt  phase19_workflow_trust_hardening.txt  phase20_sync_project_pressure.txt  phase21_compiler_debt_closeout_from_admitted_consumers.txt  phase22_project_graph_and_separate_compilation_pressure.txt  phase23_compiler_followup_from_phase22_pressure.txt  phase24_narrow_companion_family_admission_from_project_pressure.txt  phase25_compile_time_and_static_storage_semantic_closure.txt  phase26_selected_semantic_surface_widening.txt  phase27_lane_a_pressure_proof_and_reaudit.txt  phase29_narrow_static_library_target_admission.txt  phase30_separate_compilation_and_cross_target_workflow_hardening.txt  phase31_supported_slice_audit_and_support_matrix_freeze.txt  phase32_install_and_usage_path_hardening.txt  phase33_checked_debug_and_public_cut_smoke_audit.txt  phase34_narrow_time_consumer_matrix_and_api_freeze.txt  phase37_post_phase34_plateau_reaudit_and_deferred_frontier_alignment.txt  (+48 more)
docs/scratch/: alt_back.txt
examples/: README.md
examples/canonical/: arena_ast_build.mc  atomic_flag_publication.mc  bounded_ring_buffer.mc  c_abi_boundary.mc  config_parser.mc  fixed_array_slice_buffer_conversion.mc  hello_stdout.mc  hosted_default_allocator_use.mc  producer_consumer_condvar.mc  read_entire_file.mc  recursive_evaluator.mc  scoped_temp_buffer.mc  shared_counter_mutex.mc
examples/small/: hello_io.mc  read_file_len.mc  typed_empty_collections.mc
kernel/: README.md  build.toml
kernel/src/: address_space.mc  boot.mc  boot_identity.mc  boot_update.mc  bootstrap_audit.mc  bootstrap_proofs.mc  bootstrap_runtime.mc  bootstrap_services.mc  capability.mc  debug.mc  echo_service.mc  endpoint.mc  event_codes.mc  foreground_input_route.mc  init.mc  input_event.mc  interrupt.mc  ipc.mc  issue_rollup_app.mc  kernel_dispatch.mc  kernel_entry.mc  kv_service.mc  lifecycle.mc  live_receive.mc  log_service.mc  main.mc  mmu.mc  queue_service.mc  review_board_app.mc  scenario_assert.mc  scenario_audit_coordination.mc  scenario_durability.mc  scenario_queue.mc  scenario_retained_summary.mc  scenario_steps.mc  scenario_transport.mc  scenario_workset_identity.mc  scenarios.mc  sched.mc  serial_protocol.mc  (+14 more)
kernel_old/: README.md
kernel_old/src/: address_space.mc  bootstrap_state.mc  kv_service.mc  lifecycle.mc  log_service.mc  main.mc  mmu.mc  sched.mc  state.mc
runtime/: README.md
runtime/freestanding/: mc_bootstrap_main.c
runtime/hosted/: mc_hosted_runtime.c
stdlib/: README.md  active_region.mc  errors.mc  fmt.mc  fs.mc  hal.mc  io.mc  mem.mc  net.mc  os.mc  path.mc  strings.mc  sync.mc  testing.mc  text.mc  time.mc  utf8.mc
tests/: README.md
tests/cases/: hello.mc
tests/cmake/: run_clean_mc_build_dir.cmake  run_first_use_smoke.cmake  run_freestanding_support_audit.cmake  run_public_cut_smoke.cmake  run_release_readiness_audit.cmake  (+3 more)
tools/: README.md  select_tests.py  tool_case_manifest.py
(+2069 files in other folders)
